[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["full"] }
veecle-os = { version = "0.1.0", default-features = false, features = [
  "osal-std",
  "telemetry-enable",
] }
veecle-telemetry = { version = "0.1.0" }
